mise à niveau du projet

--- a/LPOM.conf
+++ b/LPOM.conf
@@ -7,5 +7,8 @@
 # Liste des libraries à ajouter au classpath
 --libraries src/resources/lib
 
+# Dossier contenant les ressources du projet
+--resources src/resources
+
 # Exclusion du dossier temp
---exclude tmp/
+#--exclude temp/
