Exclusion du dossier temp/

--- a/LPOM.conf
+++ b/LPOM.conf
@@ -11,7 +11,7 @@
 --resources src/resources
 
 # Exclusion du dossier temp
-#--exclude temp/
+--exclude temp/
 
 
 # Compiler l'application : mvnl -f -c
